// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list should match snapshot (default) 1`] = `
<div
  className="c-meta-list"
>
  <div
    className="c-meta-list__head"
  >
    <h3>
      Meta
    </h3>
    <button
      className="c-meta-list__sync qa-sync-meta"
      onClick={[Function]}
    >
      <i
        className="fas fa-sync"
      />
    </button>
  </div>
  <hr />
  <div
    className="c-meta-list__body"
  >
    <p
      className="u-margin-none"
    >
      No notifications
    </p>
  </div>
</div>
`;

exports[`list should match snapshot (list) 1`] = `
<div
  className="c-meta-list"
>
  <div
    className="c-meta-list__head"
  >
    <h3>
      Meta
    </h3>
    <button
      className="c-meta-list__sync qa-sync-meta"
      onClick={[Function]}
    >
      <i
        className="fas fa-sync"
      />
    </button>
  </div>
  <hr />
  <div
    className="c-meta-list__body"
  >
    <Component />
  </div>
</div>
`;
